# 100-days-generative-ai-learning-challenge

./: .gitignore  pyproject.toml  requirements.txt
Building llm applications using LCEL/: Getting Started.ipynb  serve.py
Building llm applications using python/: Building import components.ipynb  genai app.ipynb  study_assistant.py
Getting started with ollama and openai/: app(simple app using ollama).py  getting started.ipynb  simpleapp.ipynb
Projects/: Blogs.db  blogapi.py
langchain/: Chroma.ipynb  DataIngestionwithDocumentLoaders.ipynb  faiss.ipynb  huggingface.ipynb  llm.py  ollama embeddings.ipynb  openaiEmbeddings.ipynb  speech.txt  textsplitter.ipynb
langchain/chroma_db/: chroma.sqlite3
pydantic/: 1.intro.ipynb
