[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.5.9",
  "faiss-cpu>=1.14.3",
  "fastapi[standard]>=0.139.0",
  "google-genai>=2.10.0",
  "ipykernel>=7.3.0",
  "langchain",
  "langchain-community>=0.4.2",
  "langchain-google-genai>=4.2.6",
  "langchain-groq>=1.1.3",
  "langchain-huggingface>=1.2.2",
  "langchain-ollama>=1.1.0",
  "langchain-openai>=1.3.5",
  "langchain-text-splitters>=1.1.2",
  "pydantic>=2.13.4",
  "pypdf>=6.14.2",
  "python-dotenv>=1.2.2",
  "sentence-transformers>=5.6.0",
  "tqdm>=4.68.4",
  "uvicorn>=0.51.0",
]
